--- a/src/main/webapp/server.xhtml
+++ b/src/main/webapp/server.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:pe="http://primefaces.org/ui/extensions">
 
 <h:head>
     <title>Apache phoenix Viewer</title>
@@ -33,13 +34,15 @@
     <h2>Apache phoenix Viewer</h2>
 
     <h:form>
-        <p:panel id="schemaList" class="col-12 md:col-6 lg:col-4 xl:col-3" header="Available scemas">
+        <div class="card" id="schemaList">
+            <h5>Available scemas</h5>
+
             <ui:repeat value="#{serverBean.schemas()}" var="schema">
                 <p:commandButton value="#{schema.viewName}" action="#{serverBean.selectSchema(schema)}"
                                  update="tableList"
                                  style="margin: 1vw"/>
             </ui:repeat>
-        </p:panel>
+        </div>
 
     </h:form>
 
@@ -58,16 +61,20 @@
         <p:growl id="growl" showDetail="true"/>
 
         <h5>SQL:</h5>
-        <p:inputTextarea value="#{serverBean.sql}" rows="10" cols="80"/>
+
+        <pe:codeMirror mode="sql" theme="blackboard"
+                       value="#{serverBean.sql}" keyMap="default" lineNumbers="true"
+                       matchBrackets="true" />
+
         <br/>
         <p:commandButton value="Execute" action="#{serverBean.executeSql()}" update="sqlForm"
                          style="margin: 1vw" styleClass="ui-button-danger"/>
 
         <div class="ui-datatable-tablewrapper">
-            <table class=".ui-datatable .ui-widget" width="100%">
+            <table class=".ui-datatable .ui-widget" width="100%" cellspacing="0">
                 <thead>
                 <tr>
-                    <ui:repeat value="#{serverBean.getTableColumns()}" var="tableColumn">
+                    <ui:repeat value="#{serverBean.getSelectedCols()}" var="tableColumn">
                         <th style="border: 1px solid gray;">#{tableColumn}</th>
                     </ui:repeat>
                 </tr>
@@ -75,13 +82,16 @@
 
                 <ui:repeat value="#{serverBean.getSqlResult()}" var="row">
                     <tr>
-                        <ui:repeat value="#{serverBean.getTableColumns()}" var="tableColumn">
+                        <ui:repeat value="#{serverBean.getSelectedCols()}" var="tableColumn">
                             <td style="border: 1px dotted gray;">#{row.get(tableColumn)}</td>
                         </ui:repeat>
                     </tr>
                 </ui:repeat>
             </table>
         </div>
+
+<!--  -->
+
     </h:form>
 
 </h:body>
